# client-video

./: .gitignore  Cargo.toml  README.md
frontend/: bun.lockb  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  graphics.ts  index.ts  video_player.ts
frontend/src/components/: IdViewer.tsx  VideoStreamer.tsx
src/: client.rs  db.rs  lib.rs  message.rs  utils.rs
src/client/: logger_settings.rs  message_handler.rs  message_handlers.rs  mod.rs  routes.rs  routes_handlers.rs  utils.rs  video_chunker.rs
src/client/message_handlers/: command_dispatcher.rs  node_messages.rs  packet_dispatcher.rs
src/client/message_handlers/packet_dispatcher/: ack_handler.rs  flooding.rs  fragment_handler.rs  mod.rs  nack_handler.rs
src/client/message_handlers/packet_dispatcher/fragment_handler/: chunk_req_handler.rs  chunk_res_handler.rs  res_file_list_handler.rs  res_peer_list_handler.rs
src/client/utils/: send_packet.rs  sends.rs  start_flooding.rs
src/db/: queries.rs  structures.rs
static/: index.html
static/assets/: index-B2HFeVO3.js  index-BD_yVXQl.js  index-BJLy2GZa.js  index-BU1BsZbi.js  index-Bi_SOl9_.js  index-BprcaKN2.js  index-BrWWUkBa.js  index-Bt71sIVC.js  index-BywBJmMo.js  index-C5AiYR0R.js  index-CAt0g9IT.js  index-CGeIJzEa.css  index-CVoa2Sum.css  index-D0AGqK--.css  index-D17lKBNK.css  index-D4LHvunA.js  index-DCfGi0j9.css  index-DChyT8Eg.css  index-DXoL9P2t.js  index-DdfRsu7e.css  index-DkHn_YU5.js  index-Dop4alrQ.css  index-MsTZJXOm.js  index-qaUIRPqk.js
static/js/: graphics.js  index.js  script.js
