[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rocket = "0.5.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
mp4parse = "0.17.0"
bytes = "1.5.0"
base64 = "0.21.0"
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "debug",
] }
# packet_forge = { git = "ssh://git@github.com/Rusteze-AP/packetForge.git", branch = "main" }

packet_forge = { path = "../packet_forge" }
