[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rocket = "0.5.1"
bytes = "1.5.0"
base64 = "0.21.0"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
surrealdb = { version = "2.1.4", features = ["kv-mem"] }
chrono = "0.4.39"

wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "debug",
] }
logger = { git = "https://github.com/Rusteze-AP/logger.git", branch = "main" }
packet_forge = { git = "ssh://git@github.com/Rusteze-AP/packetForge.git", branch = "main" }
routing-handler = { git = "ssh://git@github.com/Rusteze-AP/routing-handler.git", branch = "main" }

# packet_forge = { path = "../packet_forge" }
# routing-handler = { path = "../routing-handler" }
